# Benzene

./: .gitattributes  .gitignore  .gitmodules  LICENSE.txt  meson.build
engine/: meson.build
engine/api/benzene/: benzene.hpp
engine/backends/opengl/: base.hpp  buffer.hpp  core.cpp  core.hpp  framebuffer.hpp  mesh.hpp  meson.build  model.cpp  model.hpp  pipeline.hpp
engine/backends/opengl/libs/glad/include/glad/: glad.h
engine/backends/opengl/libs/glad/source/: glad.c
engine/backends/opengl/libs/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
engine/backends/opengl/model/: batch.cpp  batch.hpp  mesh.hpp  model.cpp  model.hpp
engine/backends/opengl/renderer/: forward.cpp  forward.hpp
engine/backends/vulkan/: base.hpp  core.cpp  core.hpp  extra_api.cpp  extra_api.hpp  imgui.hpp  memory.hpp  meson.build  renderer.cpp  renderer.hpp  shader.hpp  swap_chain.hpp
engine/backends/vulkan/libs/: vk_mem_alloc.h  vk_mem_alloc.hpp
engine/backends/vulkan/shaders/: compile.sh  fragment.frag  vertex.vert
engine/backends/vulkan_deprecated/: base.hpp  core.cpp  core.hpp  extra_api.cpp  extra_api.hpp  memory.hpp  meson.build  renderer.cpp
engine/backends/vulkan_deprecated/libs/: vk_mem_alloc_impl.cpp
engine/backends/vulkan_deprecated/shaders/: fragment.frag  imgui_fragment.frag  imgui_vertex.vert
engine/core/: camera.hpp  display.hpp  format.hpp  main.cpp  model.cpp  primitives.cpp  utils.cpp  utils.hpp
engine/shaders/: fragment.frag  imgui_fragment.frag  imgui_vertex.vert  line_fragment.frag  vertex.vert
shader_editor/: compiler.cpp  compiler.hpp  editor.cpp  editor.hpp  main.cpp  meson.build
shader_editor/libs/: imnodes.cpp
test/: main.cpp  meson.build
